fixed menu gaps

--- a/src/_includes/components/css/menu.css
+++ b/src/_includes/components/css/menu.css
@@ -25,7 +25,7 @@
   padding: 1rem;
   display: grid;
   position: relative;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto auto auto;
   grid-gap: 2rem;
 }
 
@@ -42,7 +42,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 500px));
   grid-gap: 3rem;
-  place-content: center;
+  justify-content: center;
+  align-content: start;
 }
 
 .main-menu-list-item {
@@ -130,7 +131,7 @@
 }
 
 #close-menu {
-  align-self: center;
+  align-self: start;
   justify-self: end;
 }
 
@@ -194,7 +195,6 @@ li.sub-menu-button button div svg {
 }
 
 @media (min-width: 600px) {
-
   .main-menu-list-item-link,
   .sub-menu-button button {
     padding: 2rem;
